# gwrefpy

./: .buildinfo  README.md  apidocs.html  constants.html  genindex.html  index.html  model.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  well.html
.github/workflows/: publish_on_pypi.yml  test-and-lint.yml
_modules/: index.html
_sources/tutorials/: livedata.ipynb.txt  quickstart.ipynb.txt
_sources/user_guide/: 3_time_offsets.ipynb.txt  4_plotting.ipynb.txt
about/: index.html  keyconcepts.html
docs/: about.rst  apidocs.rst  conf.py  constants.rst  fitting.rst  getting_started.rst  index.rst  model.rst  models_wells.rst  plotting.rst  user_guide.rst  well.rst
docs/about/: index.rst  keyconcepts.rst
docs/tutorials/: index.rst  livedata.ipynb  logging_save_and_load.ipynb  plotting.ipynb  quickstart.ipynb  time_offsets.ipynb
docs/user_guide/: 1_intro_gwrefpy.ipynb  1_models_wells.ipynb  2_fitting.ipynb  2_fitting_wells.ipynb  2_time_offsets.ipynb  3_fitting.ipynb  3_time_offsets.ipynb  4_plotting.ipynb  5_io.ipynb  6_logging.ipynb  7_fitting_methods.ipynb  fitting.ipynb  getting_started.rst  index.rst  models_wells.ipynb  plotting.rst
src/gwrefpy/: __init__.py  constants.py  fitbase.py  (+4 more)
tests/: test_fitting.py  test_logging.py  test_offset.py  test_plotter.py  test_utils_io.py  test_version.py  test_well.py
tutorials/: index.html  livedata.html  quickstart.html
user_guide/: 1_intro_gwrefpy.html  2_fitting_wells.html  3_time_offsets.html  4_plotting.html  5_io.html  6_logging.html  7_fitting_methods.html  index.html
(+31 files in other folders)
