[project]
name = "gwrefpy"
version = "0.3.2"
description = "A python implementation of the Akvifär reference method for detecting deviations in groundwater level time series."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Anders Retzner", email = "anders.retzner@gmail.com" },
    { name = "Erik Toller" },
    { name = "Tobias Erlström" },
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "myst-nb>=1.3.0",
    "sphinx-design>=0.6.1",
]
recommended = ["notebook"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
